[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Kaleidoscope/BaseKaleidoscopeViewer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sourced/Textures/element_blue_diamond.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sourced/Textures/element_blue_square.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sourced/Textures/ball_blue.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Experimental/Tomy/gemstone_manipulation_test.gd" type="Script" id=5]

[node name="GemstoneManipulationTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="BaseKaleidoscopeViewer" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Gems" type="VBoxContainer" parent="CanvasLayer"]
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = 275.0
margin_bottom = -858.0

[node name="Label" type="Label" parent="CanvasLayer/Gems"]
margin_right = 245.0
margin_bottom = 14.0
text = "click on a gem to add it in the tumbler"

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/Gems"]
margin_top = 18.0
margin_right = 245.0
margin_bottom = 66.0
texture_normal = ExtResource( 2 )

[node name="TextureButton2" type="TextureButton" parent="CanvasLayer/Gems"]
margin_top = 70.0
margin_right = 245.0
margin_bottom = 102.0
texture_normal = ExtResource( 3 )

[node name="TextureButton3" type="TextureButton" parent="CanvasLayer/Gems"]
margin_top = 106.0
margin_right = 245.0
margin_bottom = 128.0
texture_normal = ExtResource( 4 )

[node name="GemList" type="VBoxContainer" parent="CanvasLayer"]
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 244.0
margin_right = 132.0

[node name="Label" type="Label" parent="CanvasLayer/GemList"]
margin_right = 102.0
margin_bottom = 14.0
text = "gemstone list"

[connection signal="pressed" from="CanvasLayer/Gems/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Gems/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="CanvasLayer/Gems/TextureButton3" to="." method="_on_TextureButton3_pressed"]
